--- a/styling.css
+++ b/styling.css
@@ -72,4 +72,7 @@ body {
 .brdspc {
     font-size: 140px;
     text-align: center;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
