--- a/styling.css
+++ b/styling.css
@@ -4,6 +4,13 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+h1 {
+    color: #3ba4d6;
+    font-size: 50px;
+    font-weight: 900;
+    padding-left: 10px;
+}
+
 #container {
     display: grid;
     grid-template-columns: repeat(3, 150px);
@@ -12,7 +19,9 @@ body {
     background-color: #90d8fa;
     width: 490px;
     height: 490px;
-    margin: 10px auto;
+    position: absolute;
+    top: calc(50% - 245px);
+    left: calc(50% - 245px);
 }
 
 #topleft {
@@ -78,23 +87,56 @@ body {
 }
 
 #gamedisplay {
-    background-color: #90d8fa;
-    width: 200px;
-    height: 300px;
+    background: rgb(144,216,250);
+    background: linear-gradient(180deg, rgba(144,216,250,1) 0%, rgba(59,164,214,1) 100%);
+    width: 300px;
+    height: 200px;
     position: absolute;
-    top: 10px;
+    top: calc(50% - 100px);
     left: 10px;
     text-align: center;
     visibility: hidden;
+    padding-top: 20px;
+    border: 1px black solid;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #playerinput {
     text-align: center;
     position: absolute;
-    top: 30%;
+    top: calc(50% - 100px);
     left: calc(50% - 200px);
-    background-color: #90d8fa;
+    background: rgb(144,216,250);
+    background: linear-gradient(180deg, rgba(144,216,250,1) 0%, rgba(59,164,214,1) 100%);
     width: 400px;
     height: 200px;
     border: 1px black solid;
+    padding-top: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+button {
+    font-size: 14px;
+    padding: 6px 18px;
+    background: rgb(244,177,4);
+    background: linear-gradient(0deg, rgba(244,177,4,1) 0%, rgba(255,214,99,1) 100%);
+    border: 2px solid #f99600;
+    border-radius: 5px;
+    color: black;
+    transition-duration: 0.6s;
+}
+
+  
+button:hover {
+    background: rgb(100,164,107);
+    background: linear-gradient(0deg, rgba(100,164,107,1) 0%, rgba(184,249,166,1) 100%);
+    border: 2px solid #456e4c;
+}
+
+input {
+    margin-bottom: 10px;
+}
+
+#displaytxt {
+    padding-bottom: 50px;
 }
