--- a/styling.css
+++ b/styling.css
@@ -6,22 +6,12 @@ body {
 
 h1 {
     color: #3ba4d6;
-    font-size: 50px;
     font-weight: 900;
-    padding-left: 10px;
 }
 
 #container {
-    display: grid;
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: repeat(3, 150px);
-    grid-gap: 20px;
     background-color: #90d8fa;
-    width: 490px;
-    height: 490px;
-    position: absolute;
-    top: calc(50% - 245px);
-    left: calc(50% - 245px);
+    display: grid;
 }
 
 #topleft {
@@ -79,7 +69,6 @@ h1 {
 }
 
 .brdspc {
-    font-size: 140px;
     text-align: center;
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
@@ -89,14 +78,8 @@ h1 {
 #gamedisplay {
     background: rgb(144,216,250);
     background: linear-gradient(180deg, rgba(144,216,250,1) 0%, rgba(59,164,214,1) 100%);
-    width: 300px;
-    height: 200px;
-    position: absolute;
-    top: calc(50% - 100px);
-    left: 10px;
     text-align: center;
     visibility: hidden;
-    padding-top: 20px;
     border: 1px black solid;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -123,14 +106,16 @@ button {
     border: 2px solid #f99600;
     border-radius: 5px;
     color: black;
-    transition-duration: 0.6s;
 }
 
   
 button:hover {
-    background: rgb(100,164,107);
-    background: linear-gradient(0deg, rgba(100,164,107,1) 0%, rgba(184,249,166,1) 100%);
-    border: 2px solid #456e4c;
+    background: rgb(244,141,4);
+    background: linear-gradient(0deg, rgba(244,141,4,1) 0%, rgba(255,193,99,1) 100%);
+}
+
+button:active {
+    transform: translateY(2px);
 }
 
 input {
@@ -140,3 +125,165 @@ input {
 #displaytxt {
     padding-bottom: 50px;
 }
+
+ /* Extra small devices (phones, 600px and down) */
+ @media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 40px;
+        width: 90vw;
+        padding-top: 10px;
+        margin-left: 5vw;
+    }
+
+    #container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-gap: 10px;
+        width: 90vw;
+        height: 90vw;
+        position: absolute;
+        top: calc(45% - (90vw / 2));
+        left: calc(50% - (90vw / 2));
+    }
+
+    .brdspc {
+        font-size: 74px;
+    }
+
+    #gamedisplay {
+        width: 90vw;
+        height: 25vh;
+        position: absolute;
+        top: 72vh;
+        left: 10px;
+        padding-top: 20px;
+    }
+ }
+
+ /* Small devices (portrait tablets and large phones, 600px and up) */
+ @media only screen and (min-width: 600px) {
+    h1 {
+        font-size: 50px;
+        padding-left: 10px;
+    }
+
+    #container {
+        grid-template-columns: repeat(3, 150px);
+        grid-template-rows: repeat(3, 150px);
+        grid-gap: 20px;
+        width: 490px;
+        height: 490px;
+        position: absolute;
+        top: calc(50% - 245px);
+        left: calc(50% - 245px);
+    }
+
+    .brdspc {
+        font-size: 140px;
+    }
+
+    #gamedisplay {
+        width: 300px;
+        height: 200px;
+        position: absolute;
+        top: calc(50% - 100px);
+        left: 10px;
+        padding-top: 20px;
+    }
+ }
+ 
+ /* Medium devices (landscape tablets, 768px and up) */
+ @media only screen and (min-width: 768px) {
+    h1 {
+        font-size: 50px;
+        padding-left: 10px;
+    }
+
+    #container {
+        grid-template-columns: repeat(3, 150px);
+        grid-template-rows: repeat(3, 150px);
+        grid-gap: 20px;
+        width: 490px;
+        height: 490px;
+        position: absolute;
+        top: calc(50% - 245px);
+        left: calc(50% - 245px);
+    }
+
+    .brdspc {
+        font-size: 140px;
+    }
+
+    #gamedisplay {
+        width: 300px;
+        height: 200px;
+        position: absolute;
+        top: calc(50% - 100px);
+        left: 10px;
+        padding-top: 20px;
+    }
+ }
+ 
+ /* Large devices (laptops/desktops, 992px and up) */
+ @media only screen and (min-width: 992px) {
+    h1 {
+        font-size: 50px;
+        padding-left: 10px;
+    }
+
+    #container {
+        grid-template-columns: repeat(3, 150px);
+        grid-template-rows: repeat(3, 150px);
+        grid-gap: 20px;
+        width: 490px;
+        height: 490px;
+        position: absolute;
+        top: calc(50% - 245px);
+        left: calc(50% - 245px);
+    }
+
+    .brdspc {
+        font-size: 140px;
+    }
+
+    #gamedisplay {
+        width: 300px;
+        height: 200px;
+        position: absolute;
+        top: calc(50% - 100px);
+        left: 10px;
+        padding-top: 20px;
+    }
+ }
+ 
+ /* Extra large devices (large laptops and desktops, 1200px and up) */
+ @media only screen and (min-width: 1200px) {
+    h1 {
+        font-size: 50px;
+        padding-left: 10px;
+    }
+
+    #container {
+        grid-template-columns: repeat(3, 150px);
+        grid-template-rows: repeat(3, 150px);
+        grid-gap: 20px;
+        width: 490px;
+        height: 490px;
+        position: absolute;
+        top: calc(50% - 245px);
+        left: calc(50% - 245px);
+    }
+
+    .brdspc {
+        font-size: 140px;
+    }
+
+    #gamedisplay {
+        width: 300px;
+        height: 200px;
+        position: absolute;
+        top: calc(50% - 100px);
+        left: 10px;
+        padding-top: 20px;
+    }
+ } 
