--- a/styling.css
+++ b/styling.css
@@ -115,7 +115,7 @@ button:active {
     h1 {
         font-size: 40px;
         width: 90vw;
-        margin: auto;
+        margin: 10px auto;
         text-align: center;
     }
 
@@ -163,15 +163,16 @@ button:active {
     
     #displaytxt {
         padding-bottom: 50px;
+        font-size: 20px;
     }
  }
 
  /* Small devices (portrait tablets and large phones, 600px and up) */
- @media only screen and (min-width: 600px) {
+ @media only screen and (min-width: 600px) and (max-width: 767px) {
     h1 {
         font-size: 50px;
         width: 90vw;
-        margin: auto;
+        margin: 20px auto;
         text-align: center;
     }
 
@@ -187,7 +188,7 @@ button:active {
     }
 
     .brdspc {
-        font-size: 150px;
+        font-size: 139px;
     }
 
     #gamedisplay {
@@ -208,8 +209,8 @@ button:active {
     }
 
     button {
-        font-size: 14px;
-        padding: 6px 18px;
+        font-size: 20px;
+        padding: 9px 24px;
     }
 
     input {
@@ -219,14 +220,16 @@ button:active {
     
     #displaytxt {
         padding-bottom: 50px;
+        font-size: 24px;
     }
  }
  
  /* Medium devices (landscape tablets, 768px and up) */
- @media only screen and (min-width: 768px) {
+ @media only screen and (min-width: 768px) and (max-width: 991px) {
     h1 {
-        font-size: 50px;
-        padding-left: 10px;
+        font-size: 60px;
+        margin: 40px auto;
+        text-align: center;
     }
 
     #container {
@@ -262,8 +265,8 @@ button:active {
     }
 
     button {
-        font-size: 14px;
-        padding: 6px 18px;
+        font-size: 20px;
+        padding: 9px 24px;
     }
 
     input {
@@ -273,25 +276,26 @@ button:active {
     
     #displaytxt {
         padding-bottom: 50px;
+        font-size: 24px;
     }
  }
  
  /* Large devices (laptops/desktops, 992px and up) */
- @media only screen and (min-width: 992px) {
+ @media only screen and (min-width: 992px) and (max-width: 1199px) {
     h1 {
         font-size: 50px;
         padding-left: 10px;
     }
 
     #container {
-        grid-template-columns: repeat(3, 150px);
-        grid-template-rows: repeat(3, 150px);
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
         grid-gap: 20px;
-        width: 490px;
-        height: 490px;
+        width: 90vh;
+        height: 90vh;
         position: absolute;
-        top: calc(50% - 245px);
-        left: calc(50% - 245px);
+        top: calc(50% - 45vh);
+        left: calc(50% - 45vh);
     }
 
     .brdspc {
@@ -299,7 +303,7 @@ button:active {
     }
 
     #gamedisplay {
-        width: 300px;
+        width: 400px;
         height: 200px;
         position: absolute;
         top: calc(50% - 100px);
@@ -316,8 +320,8 @@ button:active {
     }
 
     button {
-        font-size: 14px;
-        padding: 6px 18px;
+        font-size: 20px;
+        padding: 9px 24px;
     }
 
     input {
@@ -327,6 +331,7 @@ button:active {
     
     #displaytxt {
         padding-bottom: 50px;
+        font-size: 24px;
     }
  }
  
@@ -338,22 +343,24 @@ button:active {
     }
 
     #container {
-        grid-template-columns: repeat(3, 150px);
-        grid-template-rows: repeat(3, 150px);
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
         grid-gap: 20px;
-        width: 490px;
-        height: 490px;
+        width: 94vh;
+        height: 94vh;
         position: absolute;
-        top: calc(50% - 245px);
-        left: calc(50% - 245px);
+        top: calc(50% - 47vh);
+        left: calc(50% - 47vh);
     }
 
     .brdspc {
-        font-size: 140px;
+        font-size: 25vh;
+        align-content: center;
+        line-height: 25vh;
     }
 
     #gamedisplay {
-        width: 300px;
+        width: 360px;
         height: 200px;
         position: absolute;
         top: calc(50% - 100px);
@@ -370,8 +377,9 @@ button:active {
     }
 
     button {
-        font-size: 14px;
-        padding: 6px 18px;
+        font-size: 20px;
+        padding: 9px 24px;
+        margin: 10px;
     }
 
     input {
@@ -380,6 +388,7 @@ button:active {
     }
     
     #displaytxt {
-        padding-bottom: 50px;
+        padding-bottom: 25px;
+        font-size: 25px;
     }
  } 
